[package]
name = "naming"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.21"
serde = { version ="1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1"
clap = "2"